--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "guokongming",
   "license": "MIT",
   "devDependencies": {
+    "@vuepress/plugin-docsearch": "^2.0.0-beta.34",
     "vuepress": "^2.0.0-beta.33"
   }
 }
